<resources>
    <string name="app_name">Pedidos Plasvale</string>
    <string name="title_pedido">Pedido</string>
    <string name="title_config">Configurações</string>
    <string name="novo_pedido">Novo pedido</string>
    <string name="sem_pedidos">Nenhum pedido salvo ainda.\nToque em + para criar o primeiro.</string>
    <string name="salvar">Salvar</string>
    <string name="gerar_pdf">Gerar PDF</string>
    <string name="adicionar_item">Adicionar item</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="duplicar">Duplicar</string>
    <string name="compartilhar">Compartilhar</string>
</resources>
